--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "20.4.7",
-    "@types/react": "18.2.18"
+    "@types/react": "18.2.18",
+    "typescript": "^5.1.6"
   }
 }
