--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Eduds007/FinanceAPI#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
