--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   },
   "homepage": "https://github.com/Eduds007/FinanceAPI#readme",
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "next": "^13.4.12",
+    "postcss": "^8.4.27",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swagger-ui-express": "^5.0.0",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "20.4.7",
