--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
+    "prettier": "^3.0.1",
     "typescript": "^5.1.6"
   }
 }
