--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "next": "^13.4.12",
+    "next-swagger-doc": "^0.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swagger-ui-react": "^5.3.1"
   },
   "devDependencies": {
     "@types/node": "20.4.7",
