--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "next": "^13.4.12",
-    "postcss": "^8.4.27",
-
-    "tailwindcss": "^3.3.3"
     "next-swagger-doc": "^0.4.0",
+    "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swagger-ui-react": "^5.3.1"
+    "swagger-ui-react": "^5.3.1",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "20.4.7",
